--- a/index.html
+++ b/index.html
@@ -1,14 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png"/>
-    <link rel="stylesheet" href="style.css" />
-    <title>Password Generator App</title>
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png" />
+		<link rel="stylesheet" href="style.css" />
+		<title>Password Generator App</title>
+	</head>
+	<body>
+		<div class="app container">
+			<div class="app__title">Password Generator</div>
+			<div>
+				<div class="app-head">
+					<div class="app-head__password-value" id="passwordValueTxt">Hello World!</div>
+					<button class="app-head__copy-btn" id="copyPasswordBtn">
+						<img src="assets/images/icon-copy.svg" />
+					</button>
+				</div>
+				<form class="app-form">
+					<div class="app-form__input">
+						<label for="passwordRangeInput"
+							>Character Length <span id="passwordLengthTxt">10</span></label
+						>
+						<input
+							type="range"
+							class="app__input-range"
+							id="passwordRangeInput"
+							min="5"
+							max="20"
+							value="10"
+						/>
+					</div>
+					<div class="app-form__input">
+						<label for="lowercaseOptionInput">Include Lowercase Letters</label>
+						<input type="checkbox" class="app__input-checkbox" id="lowercaseOptionInput" checked />
+					</div>
+					<div class="app-form__input">
+						<label for="uppercaseOptionInput">Include Uppercase Letters</label>
+						<input type="checkbox" class="app__input-checkbox" id="uppercaseOptionInput" checked />
+					</div>
+					<div class="app-form__input">
+						<label for="numbersOptionInput">Include Numbers</label>
+						<input type="checkbox" class="app__input-checkbox" id="numbersOptionInput" checked />
+					</div>
+					<div class="app-form__input">
+						<label for="symbolsOptionInput">Include Symbols</label>
+						<input type="checkbox" class="app__input-checkbox" id="symbolsOptionInput" />
+					</div>
+					<div class="app__strength">
+						<div class="app__strength-title">Strength</div>
+						<div>
+							<div id="passwordStrengthTxt"></div>
+							<div class="app__bars">
+								<span class="app__bars-item"></span><span class="app__bars-item"></span
+								><span class="app__bars-item"></span><span class="app__bars-item"></span>
+							</div>
+						</div>
+					</div>
+					<button class="app-form__button" id="generatePasswordBtn">
+						Generate <img src="assets/images/icon-arrow-right.svg" />
+					</button>
+				</form>
+			</div>
+		</div>
+	</body>
 </html>
