feat: Activate any checkbox if the last one activated is deactivated

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png" />
 		<link rel="stylesheet" href="style.css" />
+		<script src="scripts/index.js" defer></script>
 		<title>Password Generator App</title>
 	</head>
 	<body>
@@ -21,8 +22,8 @@
 				<form class="app-form">
 					<div class="app-form__input">
 						<label for="passwordRangeInput"
-							>Character Length <span id="passwordLengthTxt">10</span></label
-						>
+							>Character Length <span id="passwordLengthTxt"></span
+						></label>
 						<input
 							type="range"
 							class="app__input-range"
