feat: Create the function to generate the password and the functions to generate the characters

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="app__title">Password Generator</div>
 			<div>
 				<div class="app-head">
-					<div class="app-head__password-value" id="passwordValueTxt">Hello World!</div>
+					<div class="app-head__password-value" id="passwordValueTxt"></div>
 					<button class="app-head__copy-btn" id="copyPasswordBtn">
 						<img src="assets/images/icon-copy.svg" />
 					</button>
@@ -30,7 +30,7 @@
 							id="passwordRangeInput"
 							min="5"
 							max="20"
-							value="10"
+							value="12"
 						/>
 					</div>
 					<div class="app-form__input">
