--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png" />
 		<link rel="stylesheet" href="style.css" />
-		<script src="scripts/index.js" defer></script>
+		<script src="index.js" defer></script>
+		<script src="https://cdn.jsdelivr.net/npm/@zxcvbn-ts/core@2.0.0/dist/zxcvbn-ts.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/@zxcvbn-ts/language-common@2.0.0/dist/zxcvbn-ts.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/@zxcvbn-ts/language-en@2.0.0/dist/zxcvbn-ts.js"></script>
 		<title>Password Generator App</title>
 	</head>
 	<body>
@@ -28,9 +31,9 @@
 							type="range"
 							class="app__input-range"
 							id="passwordRangeInput"
-							min="5"
+							min="1"
 							max="20"
-							value="12"
+							value="10"
 						/>
 					</div>
 					<div class="app-form__input">
